src/components/Listing.css
.Listing {
  display: inline-grid;

  height: 250px;
  width: 250px;

  display: inline-block;
  cursor: pointer;
  box-shadow: 0 0 8px #f0f0f0;
  background-color: #ffffff;
  border: none;
  border-radius: 8px;
}

.Listing:hover {
  background-color: #fafafa;
  outline: 1px solid #d7d7d7;
}

.Info {
  display: flex;
  

  font-size: 18px;
  text-align: center;
  text-decoration: none;
  color: #fff;
  background-color: #f0f0f0;
  margin: 6px;
}

.InfoHeader {
  font-size: 18px;
  padding: 10px;
  text-align: center;
  text-decoration: none;
  color: #fff;
  background-color: #603244;
}

.InfoContents {
  font-size: 18px;
  padding: 10px;
  text-align: center;
  text-decoration: none;
  color: #000000;
}




.modal {
  display: inline-grid;

  height: auto;
  width: auto;

  display: inline-block;
  box-shadow: 0 0 60px 10px #f0f0f0;
  background-color: #ffffff;
  border: none;
  border-radius: 8px;
  overflow: hidden;
}

.header {
  font-size: 18px;
  overflow: hidden;
  padding-top: 4px;
  padding-bottom: 4px;
  text-align: center;
  text-decoration: none;
  color: #fff;
  background-color: #603244;
  border-radius: 8px 8px 0 0;
  border: none;
}

.popInfo {
  display: flex;
  

  font-size: 18px;
  text-align: center;
  text-decoration: none;
  color: #fff;
  background-color: #f0f0f0;
  margin: 6px;
}

.popHeader {
  font-size: 18px;
  padding: 10px;
  text-align: center;
  text-decoration: none;
  color: #fff;
  background-color: #603244;
}

.popContents {
  font-size: 18px;
  padding: 10px;
  text-align: center;
  text-decoration: none;
  color: #000000;
}

